# aetherscope

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: adsb.py  adsb_enrich.py  app.py  audio_record.py  capture.py  decode_file.py  decoders.py  device.py  gps.py  iq_playback.py  radio.py  replay.py  scan.py  sdr.py  sigmf.py  store.py  telemetry.py  tuning.py
deploy/: Caddyfile.example  com.aetherscope.plist.template  com.clorth0.hackrf-web.plist  com.hackrf-web.plist.template  install-launchd.sh  install.sh  restart.sh
docs/: architecture.md  configuration.md  deployment.md  install.md
docs/superpowers/plans/: 2026-06-14-data-foundation.md  2026-06-14-instrument-and-observability-upgrades.md
docs/superpowers/specs/: 2026-06-14-adsb-enrichment-design.md  2026-06-14-audio-recording-design.md  2026-06-14-auto-tuner-snap-to-peak-design.md  2026-06-14-data-foundation-design.md  2026-06-14-device-inventory-design.md  2026-06-14-fm-listening-design.md  2026-06-14-iq-playback-design.md  2026-06-14-radio-listening-design.md
frontend/static/: radio-audio-worklet.js  style.css  waterfall.js
frontend/templates/: index.html
tests/: test_adsb_enrich.py  test_audio_record.py  test_bands.py  test_capture.py  test_config.py  test_decode_file.py  test_gps.py  test_iq_playback.py  test_radio.py  test_replay.py  test_sigmf.py  test_store.py  test_sweep.py  test_telemetry.py  test_tuning.py
