[project]
name = "aetherscope"
version = "0.5.0"
description = "Web interface for HackRF SDR — live waterfall, tuning, security-RX workflows"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.4",
    "simple-websocket>=1.0",
    "numpy>=2.0",
    "scipy>=1.11",
]

[project.scripts]
aetherscope = "backend.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
